<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailActivity">

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="377dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/placeholder_subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="371dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/placeholder_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="363dp"
        android:layout_height="362dp"
        android:layout_marginBottom="156dp"
        android:text="@string/placeholder_compose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/emailsavebutton"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>